Fix clipping

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,8 @@ h1 {
     font-weight: lighter;
 }
 .links {
+    padding-top: 15px;
+    padding-bottom: 15px;
     text-align: center;
 }
 
